--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,57 +39,86 @@
   height: 200px;
   transition: transform 0.3s ease;
 }
+button {
+  all: unset;
+  display: inline-block;
+  cursor: pointer;
+}
 
+/* Повне скидання input та textarea */
+input,
+textarea {
+  all: unset;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+}
 .feedback-form {
-  max-width: 500px;
-  margin: 40px auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 12px;
-  background-color: #f9f9f9;
-  font-family: sans-serif;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  background: #fff;
 }
 
 .feedback-form label {
-  display: block;
-  margin-bottom: 15px;
-  font-weight: 600;
-  color: #333;
-}
-
-.feedback-form input[type='email'],
-.feedback-form textarea {
-  width: 100%;
-  padding: 10px 14px;
+  color: #2e2f42;
+  font-family: Montserrat;
   font-size: 16px;
-  border: 1px solid #bbb;
-  border-radius: 8px;
-  box-sizing: border-box;
-  transition: border-color 0.3s, box-shadow 0.3s;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
 }
 
-.feedback-form input[type='email']:focus,
+.feedback-form input[type='email'] {
+  width: 360px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  text-align: left;
+  padding: 8px 16px;
+}
+.feedback-form textarea {
+  width: 360px;
+  height: 80px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  text-align: left;
+  padding: 8px 16px;
+}
+
+.feedback-form input:focus,
 .feedback-form textarea:focus {
-  border-color: #007bff;
-  outline: none;
-  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.2);
+  border-radius: 4px;
+  border: 1px solid #000;
 }
 
 .feedback-form button[type='submit'] {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: 600;
-  color: #fff;
-  background-color: #007bff;
-  border: none;
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+  background: #4e75ff;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
 }
 
-.feedback-form button[type='submit']:hover {
-  background-color: #0056b3;
+.feedback-form button:hover {
+  background: #6c8cff;
 }
